Gestione aggiornamento db con Liquibase

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -4,7 +4,7 @@ spring.datasource.username=ecm
 spring.datasource.password=3dinformatica
 
 # JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # THYMELEAF
