--- a/src/main/resources/application-laco.properties
+++ b/src/main/resources/application-laco.properties
@@ -4,7 +4,7 @@ spring.datasource.username=veneto
 spring.datasource.password=veneto
 
 # JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
