--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # JPA
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.default_schema=ecmdb
 
 #DEFAULT
 #spring.jpa.hibernate.naming-strategy=org.springframework.boot.orm.jpa.hibernate.SpringNamingStrategy
@@ -13,8 +14,9 @@ spring.messages.basename=i18n/messages
 # SPRING PROFILES
 spring.profiles.active=@spring.profile@
 
-# Liquibase
+# Liquibase dati usati durante l'avvio della webapp per aggiornare il db
 liquibase.change-log=classpath:liquibase/master-changeLog.xml
+liquibase.default-schema=ecmdb
 
 multipart.maxFileSize= 10MB
 multipart.maxRequestSize = 20MB
