--- a/src/main/resources/liquibase/liquibase.properties
+++ b/src/main/resources/liquibase/liquibase.properties
@@ -1,15 +1,28 @@
+# Liquibase dati usati dal comando 
+# > mvn compile liquibase:diff
 changeLogFile=src/main/resources/liquibase/master-changeLog.xml
 driver=org.postgresql.Driver
 #Database da controllare per realizzare i diff quando si lancia il comando per generare i files da mettere nel master-changelog.xml
-url=jdbc:postgresql://localhost/ecmdb
-defaultSchemaName=
+url=jdbc:postgresql://localhost:5432/ecmdb
+defaultSchemaName=ecmdb
+#defaultCatalogName=ecmdb
 username=ecm
 password=3dinformatica
+
+#######################################################################################
 #definire nell'ordine:
 #package che contiene le entity
 #package che contiene i converters,....
 #dialect da utilizzare
+
+#hibernate.ejb.naming_strategy
+# Per allineare il naming strategy di liquibase con quello di springboot (spring data)
+# il nome delle colonne da camelCase passa a snake_case => testCase -> test_case
+# il nome delle colonne delle chiavi esterne di una tabella aggiunge il suffisso _id => foreignKey -> tabella_id
+
 #referenceUrl=hibernate:spring:it.tredi.ecm.dao.entity,it.tredi.ecm.dao.enumlist,it.tredi.springdatautil?dialect=org.hibernate.dialect.PostgreSQLDialect&hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 referenceUrl=hibernate:spring:it.tredi.ecm.dao.entity,it.tredi.ecm.dao.enumlist,it.tredi.springdatautil?dialect=org.hibernate.dialect.PostgreSQLDialect&hibernate.ejb.naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringNamingStrategy
+#######################################################################################
+
 verbose=true
 logging=debug
