--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,13 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<timestamp>${maven.build.timestamp}</timestamp>
-		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
+		<maven.build.timestamp.format>yyyyMMdd_HHmmss</maven.build.timestamp.format>
 		<!-- tomcat.version>7.0.69</tomcat.version -->
 		<tomcat.version>8.0.28</tomcat.version>
 		<servlet-api.version>3.0.0</servlet-api.version>
-		<liquibaseplugin.version>3.4.2</liquibaseplugin.version>
-		<liquibase-hibernate4.version>3.5</liquibase-hibernate4.version>
+		<liquibasecore.version>3.5.3</liquibasecore.version>
+		<liquibaseplugin.version>3.5.3</liquibaseplugin.version>
+		<liquibase-hibernate4.version>3.6</liquibase-hibernate4.version>
 		<postgresql.version>9.4.1211</postgresql.version>
 	</properties>
 
@@ -118,6 +119,7 @@
 		<dependency>
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
+			<version>${liquibasecore.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>it.tredi</groupId>
