--- a/src/main/resources/application-abarducci.properties
+++ b/src/main/resources/application-abarducci.properties
@@ -1,5 +1,6 @@
 # DATASOURCE
-spring.datasource.url= jdbc:postgresql://localhost:5432/ecmdb
+#spring.datasource.url= jdbc:postgresql://localhost:5432/ecmdb
+spring.datasource.url= jdbc:postgresql://localhost:5432/ecmliquidb2
 spring.datasource.username=ecm
 spring.datasource.password=3dinformatica
 
