--- a/src/main/resources/application-tom.properties
+++ b/src/main/resources/application-tom.properties
@@ -8,9 +8,12 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.default_schema=ecmdb
 
 # THYMELEAF
 spring.thymeleaf.cache: false
+
+server.port = 8080
 
 # Workflow
 bonita.bonitaviewserverurl=http://ecmtest.bo.priv:18080/bonitaview
@@ -46,5 +49,36 @@ cogeaps.rest_service.carica=/app/api/evento/carica
 cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
 cogeaps.username=ente_050
 cogeaps.password=superadmin
+
+##############################################
+
+############### ENGINEERING PROPERTIES ###############
+
+######### MY PAY #########
+
+#Parametri per connettersi al servizio (diverso tra test e produzione)
+ipa=R_VENETO
+password=password
+#Id servizio assegnato da MyPay (IUD)
+servizio=009
+#Endpoint (diverso tra test e produzione)
+endpoint.pagamenti=https://paygov.collaudo.regione.veneto.it/pa/services/PagamentiTelematiciDovutiPagati
+#Specifico in base a cosa pago - da concordare con RVE e Mola
+datispecifici.riscossione=9/123456
+#Da aggiornare con il dato definitivo (da concordare con Regione)
+tipo.dovuto.evento=ECM_SINGOLO_EVENTO
+tipo.dovuto.quotaannua=ECM_QUOTA_ANNUA
+proxy.attivo=false
+proxy.host
+proxy.port
+#PER ALCUNI PROXY POTREBBE ANCHE NON ESSERE VALORIZZATO. IN EFFETTO DOVREBBE ESSERE COSI' PER QUELLO DI REGIONE
+proxy.username
+proxy.password
+
+
+######### FIRMA DIGITALE #########
+firma.url=https://servizi.collaudo.regione.veneto.it/FirmaWeb/servlet/AdapterHTTP
+firma.idclassificazione=60.00.05.00.00-C.120.21.1.B4
+firma.referer=http://localhost:8080/ecm/*
 
 ##############################################
