aggiunte le costanti che regolano l'editabilità degli Eventi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -94,6 +94,15 @@ durata.minima.gruppi.miglioramento.fsc=8
 #durata minima richiesta per evento FSC di tipo progetti di miglioramento
 durata.minima.progetti.miglioramento.fsc=8
 
+#giorni prima del blocco edit della riedizione Evento
+giorni.prima.blocco.edit.riedizione=4
+
+#giorni prima del blocco edit di Eventi del provider di gruppo A
+giorni.prima.blocco.edit.gruppoA=4
+
+#giorni prima del blocco edit di Eventi del provider di gruppo B
+giorni.prima.blocco.edit.gruppoB=10
+
 ########################################################
 
 
