--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.default_schema=ecmdb
+spring.jpa.properties.hibernate.default_schema=ecmdb
 
 # THYMELEAF
 spring.thymeleaf.cache: false
