--- a/src/main/resources/application-regione-test.properties
+++ b/src/main/resources/application-regione-test.properties
@@ -1,7 +1,10 @@
 # DATASOURCE
-spring.datasource.url= jdbc:postgresql://localhost:5432/ecmdb
+spring.datasource.url= jdbc:postgresql://dltpgsqlecmdb.farmsanita.intra.rve:6432/ecmdb
 spring.datasource.username=ecm
 spring.datasource.password=3dinformatica
+
+# Liquibase
+liquibase.default-schema=ecmdb
 
 # JPA
 spring.jpa.hibernate.ddl-auto=none
@@ -29,25 +32,25 @@ logging.level.org.thymeleaf.* ERROR
 ############### ECM PROPERTIES ###############
 
 ###### E-MAIL ######
-mail.host=mailrelay.farmsanita.intra.rve
+mail.host=mail.regione.veneto.it
 mail.port=25
 mail.protocol=smtp
-mail.smtp.auth=false
+mail.smtp.auth=true
 mail.smtp.starttls.enable=false
 mail.from=segreteriae@ecm.it
-mail.username=
-mail.password=
+mail.username=sanita-auac
+mail.password=AppWeb01
 #base url della webapp per link nelle email
 application.baseurl=
 
 ########## Co.Ge.A.P.S. #########
 cogeaps.protocol=http
-cogeaps.host=???
-cogeaps.port=-1
+cogeaps.host=application2.cogeaps.it
+cogeaps.port=8090
 cogeaps.rest_service.carica=/app/api/evento/carica
 cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
-cogeaps.username=???
-cogeaps.password=???
+cogeaps.username=ente_050
+cogeaps.password=superadmin
 
 ##############################################
 
