modifiche validatore FSC (partecipante/tutor)

--- a/src/main/resources/application-joe19.properties
+++ b/src/main/resources/application-joe19.properties
@@ -1,5 +1,5 @@
 # DATASOURCE
-spring.datasource.url= jdbc:postgresql://localhost:5432/bestdbever
+spring.datasource.url= jdbc:postgresql://localhost:5432/ecmdb
 spring.datasource.username=ecm
 spring.datasource.password=3dinformatica
 
@@ -16,12 +16,12 @@ spring.thymeleaf.cache: false
 server.port = 8080
 
 # Workflow
-bonita.bonitaviewserverurl=http://localhost:9980/bonitaview
-bonita.serverurl=http://localhost:9980
+bonita.bonitaviewserverurl=http://ecmtest.bo.priv:18080/bonitaview
+bonita.serverurl=http://ecmtest.bo.priv:18080
 bonita.applicationname=bonita
 bonita.admin.username=admin
 bonita.admin.password=admin
-bonita.users.password=pwd
+bonita.users.password=pwddemo
 bonita.createaccountonlogin=true
 
 ############### ECM PROPERTIES ###############
