--- a/pom.xml
+++ b/pom.xml
@@ -161,8 +161,23 @@
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-csv</artifactId>
 		    <version>1.3</version>
-		</dependency>		
-		<dependency>
+		</dependency>	
+		 <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.49</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
+            <version>1.49</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.santuario</groupId>
+            <artifactId>xmlsec</artifactId>
+            <version>1.5.1</version>
+        </dependency>	
+	<!-- 	<dependency>
 		    <groupId>org.bouncycastle</groupId>
 		    <artifactId>bcprov-jdk16</artifactId>
 		    <version>1.46</version>
@@ -171,7 +186,7 @@
 		    <groupId>org.bouncycastle</groupId>
 		    <artifactId>bcmail-jdk16</artifactId>
 		    <version>1.46</version>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
