aggionamento server email test regione veneto

--- a/src/main/resources/application-regione-test.properties
+++ b/src/main/resources/application-regione-test.properties
@@ -32,14 +32,14 @@ logging.level.org.thymeleaf.* ERROR
 ############### ECM PROPERTIES ###############
 
 ###### E-MAIL ######
-mail.host=mail.regione.veneto.it
+mail.host=mailrelay.farmsanita.intra.rve
 mail.port=25
 mail.protocol=smtp
-mail.smtp.auth=true
+mail.smtp.auth=false
 mail.smtp.starttls.enable=false
-mail.from=segreteriae@ecm.it
-mail.username=sanita-auac
-mail.password=AppWeb01
+mail.from=segreteria.ecm@regione.veneto.it
+mail.username=
+mail.password=
 #base url della webapp per link nelle email
 application.baseurl=
 
