Modificato config regione test

--- a/src/main/resources/application-regione-test.properties
+++ b/src/main/resources/application-regione-test.properties
@@ -20,8 +20,8 @@ logging.config=classpath:log4j.properties
 logging.level.org.thymeleaf.* ERROR
 
 # Workflow
-bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
-bonita.serverurl=http://127.0.0.1:9999
+bonita.bonitaviewserverurl=http://altecm01:18080/bonitaview
+bonita.serverurl=http://altecm01:18080
 bonita.applicationname=bonita
 bonita.admin.username=admin
 bonita.admin.password=admin
