finiti controlli su edit/noEdit e date Eventi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,6 +58,9 @@ giorni.min.evento.provider.A=15
 #numero giorni minimi necessari per poter inserire evento (provider B)
 giorni.min.evento.provider.B=30
 
+#numero giorni minimi necessari per poter inserire evento riezione
+giorni.min.evento.riedizione=10
+
 #numero responsabili scientifici evento massimi
 numero.massimo.responsabili.evento=3
 
