Modifica alle properties per il collegamento a Co.ge.A.p.s

--- a/src/main/resources/application-abarducci.properties
+++ b/src/main/resources/application-abarducci.properties
@@ -47,7 +47,7 @@ cogeaps.port=8090
 cogeaps.rest_service.carica=/app/api/evento/carica
 cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
 cogeaps.username=ente_050
-cogeaps.password=superadmin
+cogeaps.password=JqFdpjv!9Y
 
 ##############################################
 
