--- a/src/main/resources/application-simone.properties
+++ b/src/main/resources/application-simone.properties
@@ -45,6 +45,5 @@ cogeaps.port=8090
 cogeaps.rest_service.carica=/app/api/evento/carica
 cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
 cogeaps.username=ente_050
-cogeaps.password=superadmin
-
+cogeaps.password=JqFdpjv!9Y
 ##############################################
