pulizia ai file di properties

--- a/src/main/resources/application-abarducci.properties
+++ b/src/main/resources/application-abarducci.properties
@@ -14,7 +14,9 @@ spring.jpa.properties.hibernate.format_sql=true
 # THYMELEAF
 spring.thymeleaf.cache: false
 
-# Workflow
+############### ECM PROPERTIES ###############
+
+###### Workflow ######
 bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
 bonita.serverurl=http://127.0.0.1:9999
 bonita.applicationname=bonita
@@ -22,8 +24,6 @@ bonita.admin.username=adm
 bonita.admin.password=pwd
 bonita.users.password=pwd
 bonita.createaccountonlogin=true
-
-############### ECM PROPERTIES ###############
 
 ###### E-MAIL ######
 mail.host=dns3.bo.priv
@@ -39,15 +39,6 @@ application.baseurl=http://localhost:8080
 debugTestMode=true
 #directory per salvare i files
 fileRootPath=C:\\ApplDir\\ecm_files
-
-########## Co.Ge.A.P.S. #########
-cogeaps.protocol=http
-cogeaps.host=application2.cogeaps.it
-cogeaps.port=8090
-cogeaps.rest_service.carica=/app/api/evento/carica
-cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
-cogeaps.username=ente_050
-cogeaps.password=JqFdpjv!9Y
 
 ##############################################
 
