--- a/src/main/resources/application-simone.properties
+++ b/src/main/resources/application-simone.properties
@@ -12,7 +12,9 @@ spring.jpa.properties.hibernate.format_sql=true
 # THYMELEAF
 spring.thymeleaf.cache: false
 
-# Workflow
+############### ECM PROPERTIES ###############
+
+###### Workflow ######
 bonita.bonitaviewserverurl=http://10.17.61.242:18080/bonitaview
 bonita.serverurl=http://10.17.61.242:18080
 bonita.applicationname=bonita
@@ -20,8 +22,6 @@ bonita.admin.username=admin
 bonita.admin.password=admin
 bonita.users.password=pwd
 bonita.createaccountonlogin=true
-
-############### ECM PROPERTIES ###############
 
 ###### E-MAIL ######
 mail.host=localhost
@@ -38,12 +38,4 @@ debugTestMode=true
 #directory per salvare i files
 fileRootPath=c:\\ecm\\files
 
-########## Co.Ge.A.P.S. #########
-cogeaps.protocol=http
-cogeaps.host=application2.cogeaps.it
-cogeaps.port=8090
-cogeaps.rest_service.carica=/app/api/evento/carica
-cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
-cogeaps.username=ente_050
-cogeaps.password=JqFdpjv!9Y
 ##############################################
