--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -19,7 +19,9 @@ logging.level.org.apache.juli.logging.DirectJDKLog = ERROR
 logging.config=classpath:log4j.properties
 logging.level.org.thymeleaf.* ERROR
 
-# Workflow
+############### ECM PROPERTIES ###############
+
+###### Workflow ######
 bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
 bonita.serverurl=http://127.0.0.1:9999
 bonita.applicationname=bonita
@@ -28,8 +30,6 @@ bonita.admin.password=admin
 bonita.users.password=pwd
 bonita.createaccountonlogin=true
 logging.level.org.thymeleaf.* ERROR
-
-############### ECM PROPERTIES ###############
 
 ###### E-MAIL ######
 mail.host=mail.regione.veneto.it
@@ -51,27 +51,5 @@ cogeaps.rest_service.carica=/app/api/evento/carica
 cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
 cogeaps.username=???
 cogeaps.password=???
-
-##############################################
-
-############### ENGINEERING PROPERTIES ###############
-#Parametri per connettersi al servizio (diverso tra test e produzione)
-ipa=R_VENETO
-password=password
-#Id servizio assegnato da MyPay (IUD)
-servizio=009
-#Endpoint (diverso tra test e produzione)
-endpoint.pagamenti=https://paygov.collaudo.regione.veneto.it/pa/services/PagamentiTelematiciDovutiPagati
-#Specifico in base a cosa pago - da concordare con RVE e Mola
-datispecifici.riscossione=9/123456
-#Da aggiornare con il dato definitivo (da concordare con Regione)
-tipo.dovuto.evento=ECM_SINGOLO_EVENTO
-tipo.dovuto.quotaannua=ECM_QUOTA_ANNUA
-proxy.attivo=false
-proxy.host
-proxy.port
-#PER ALCUNI PROXY POTREBBE ANCHE NON ESSERE VALORIZZATO. IN EFFETTO DOVREBBE ESSERE COSI' PER QUELLO DI REGIONE
-proxy.username
-proxy.password
 
 ##############################################
