Troncamento causle pagamento myPay

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -108,6 +108,16 @@ giorni.prima.blocco.edit.gruppoB=10
 
 ########################################################
 
+########## Co.Ge.A.P.S. #########
+cogeaps.protocol=http
+cogeaps.host=application2.cogeaps.it
+cogeaps.port=8090
+cogeaps.rest_service.carica=/app/api/evento/carica
+cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
+cogeaps.username=ente_050
+cogeaps.password=JqFdpjv!9Y
+
+##############################################
 
 ############### THREAD PROPERTIES ############
 
@@ -120,6 +130,8 @@ thread.waitForTasksToCompleteOnShutdown=true
 ##############################################
 
 ############### ENGINEERING PROPERTIES ###############
+
+######### MY PAY #########
 #Parametri per connettersi al servizio (diverso tra test e produzione)
 ipa=R_VENETO
 password=password
@@ -138,12 +150,11 @@ proxy.port
 #PER ALCUNI PROXY POTREBBE ANCHE NON ESSERE VALORIZZATO. IN EFFETTO DOVREBBE ESSERE COSI' PER QUELLO DI REGIONE
 proxy.username
 proxy.password
-
+causale.length=140
 
 ######### FIRMA DIGITALE #########
 firma.url=https://servizi.collaudo.regione.veneto.it/FirmaWeb/servlet/AdapterHTTP
 firma.idclassificazione=60.00.05.00.00-C.120.21.1.B4
 firma.referer=http://localhost:8080/ecm/*
 
-##############################################
 ##############################################
