--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -151,10 +151,19 @@ proxy.port
 proxy.username
 proxy.password
 causale.length=140
+versione=6.0
 
 ######### FIRMA DIGITALE #########
 firma.url=https://servizi.collaudo.regione.veneto.it/FirmaWeb/servlet/AdapterHTTP
 firma.idclassificazione=60.00.05.00.00-C.120.21.1.B4
 firma.referer=http://localhost:8080/ecm/*
+
+######### PROTOCOLLO #########
+protocollo.codApplicativo=S051.001
+protocollo.operatore=tania-ferrotti
+protocollo.codStruttura=69.02.03.00.00
+protocollo.idc=C.120.23.1
+protocollo.oggetto=Test Engineering ECM
+protocollo.endpoint=http://172.31.226.82/LapisWebSOAP/LapisWebSOAP.asp
 
 ##############################################
