--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -156,7 +156,7 @@ versione=6.0
 ######### FIRMA DIGITALE #########
 firma.url=https://servizi.collaudo.regione.veneto.it/FirmaWeb/servlet/AdapterHTTP
 firma.idclassificazione=60.00.05.00.00-C.120.21.1.B4
-firma.referer=http://localhost:8080/ecm/*
+firma.referer=http://ecmtest.demo.3di.it/ecm/*
 
 ######### PROTOCOLLO #########
 protocollo.codApplicativo=S051.001
