--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ file.multipart.maxFileSize=2
 seduta.validation.minutes=30
 
 #email segreteria ECM
-email.segreteriaEcm=segreteria@ecm.it
+email.segreteriaEcm=segreteria.ECMVeneto@regione.veneto.it
 
 #debugTestMode default=false se attivata permette di visualizzare una serie di comandi per agevolare la fase di test
 #esempio...mette si a tutte le valutazioni....
