Gestione Debug salta protocollo

--- a/src/main/resources/application-abarducci.properties
+++ b/src/main/resources/application-abarducci.properties
@@ -39,6 +39,7 @@ mail.password=
 #base url della webapp per link nelle email
 application.baseurl=http://localhost:8080
 debugTestMode=true
+debugSaltaProtocollo=true
 #directory per salvare i files
 fileRootPath=C:\\ApplDir\\ecm_files
 
