--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,6 +42,7 @@ email.segreteriaEcm=segreteria.ECMVeneto@regione.veneto.it
 #debugTestMode default=false se attivata permette di visualizzare una serie di comandi per agevolare la fase di test
 #esempio...mette si a tutte le valutazioni....
 debugTestMode=false
+debugSaltaProtocollo=false
 
 #giorni minimi in cui il provider può effettuare l'integrazione (utilizzato per popolare la select)
 giorni.integrazione.min=5
