--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -37,9 +37,9 @@ mail.port=25
 mail.protocol=smtp
 mail.smtp.auth=true
 mail.smtp.starttls.enable=false
-mail.from=segreteriae@ecm.it
 mail.username=sanita-auac
 mail.password=AppWeb01
+email.segreteriaEcm=segreteria.ECMVeneto@regione.veneto.it
 #base url della webapp per link nelle email
 application.baseurl=
 
