--- a/src/main/resources/application-regione-test.properties
+++ b/src/main/resources/application-regione-test.properties
@@ -37,9 +37,9 @@ mail.port=25
 mail.protocol=smtp
 mail.smtp.auth=false
 mail.smtp.starttls.enable=false
-mail.from=segreteria.ecm@regione.veneto.it
 mail.username=
 mail.password=
+email.segreteriaEcm=segreteria.ECMVeneto@regione.veneto.it
 #base url della webapp per link nelle email
 application.baseurl=
 
