--- a/src/main/resources/application-abarducci.properties
+++ b/src/main/resources/application-abarducci.properties
@@ -33,14 +33,12 @@ mail.port=25
 mail.protocol=smtp
 mail.smtp.auth=false
 mail.smtp.starttls.enable=false
-mail.from=me@bo.prov
 mail.username=
 mail.password=
+email.segreteriaEcm=me@bo.prov
 #base url della webapp per link nelle email
 application.baseurl=http://localhost:8080
 debugTestMode=true
-#directory per salvare i files
-fileRootPath=C:\\ApplDir\\ecm_files
 
 ##############################################
 
