--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -29,12 +29,10 @@ mail.port=25
 mail.protocol=smtp
 mail.smtp.auth=false
 mail.smtp.starttls.enable=false
-mail.from=me@bo.prov
 mail.username=
 mail.password=
+email.segreteriaEcm=me@bo.prov
 #base url della webapp per link nelle email
 application.baseurl=http://ecmtest.demo.3di.it/ecm/
-#directory per salvare i files
-fileRootPath=/opt/3di.it/ecmFiles
 
 ##############################################
