--- a/src/main/resources/application-joe19.properties
+++ b/src/main/resources/application-joe19.properties
@@ -32,13 +32,11 @@ mail.port=25
 mail.protocol=smtp
 mail.smtp.auth=false
 mail.smtp.starttls.enable=false
-mail.from=me@bo.prov
 mail.username=
 mail.password=
+email.segreteriaEcm=me@bo.prov
 #base url della webapp per link nelle email
 application.baseurl=http://localhost:8080
 debugTestMode=true
-#directory per salvare i files
-fileRootPath=c:\\ecm\\files
 
 ##############################################
