--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -10,6 +10,9 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 # THYMELEAF
 spring.thymeleaf.cache: false
 
+#DEBUG
+debugSaltaProtocollo=true
+
 ############### ECM PROPERTIES ###############
 
 debugTestMode=true
