--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,6 +15,9 @@ spring.thymeleaf.cache: false
 
 server.port = 8080
 
+debugTestMode=true
+debugSaltaProtocollo=true
+
 ############### ECM PROPERTIES ###############
 
 ###### Workflow ######
