--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -107,6 +107,9 @@ giorni.prima.blocco.edit.gruppoA=4
 #giorni prima del blocco edit di Eventi del provider di gruppo B
 giorni.prima.blocco.edit.gruppoB=10
 
+#abilta / disabilita l'invio automatico di email come promemoria delle scadenza
+task.sendAlertEmali=false
+
 ########################################################
 
 ###### Workflow ######
