--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -108,7 +108,7 @@ giorni.prima.blocco.edit.gruppoA=4
 giorni.prima.blocco.edit.gruppoB=10
 
 #abilta / disabilita l'invio automatico di email come promemoria delle scadenza
-task.sendAlertEmali=false
+task.sendAlertEmail=false
 
 ########################################################
 
