parametrizzato giorni fineModifica

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -112,6 +112,16 @@ task.sendAlertEmail=false
 
 ########################################################
 
+############### DATE E SCADENZE VARIE ###############
+#pianoFormativo.dataFineModifica -> 15 Dicembre
+pianoFormativo.giornoFineModifica=15
+pianoFormativo.meseFineModifica=12
+
+#pianoFormativo.dataFineModifica -> 30 Aprile
+relazioneAnnuale.giornoFineModifica=30
+relazioneAnnuale.meseFineModifica=4
+
+
 ###### Workflow ######
 bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
 bonita.serverurl=http://127.0.0.1:9999
