scadenza piano formativo posticipata per la produzione

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -16,6 +16,9 @@ debugSaltaProtocollo=true
 ############### ECM PROPERTIES ###############
 
 debugTestMode=true
+debugSaltaProtocollo=true
+pianoFormativo.giornoFineModifica=31
+pianoFormativo.meseFineModifica=12
 
 ###### Workflow ######
 bonita.bonitaviewserverurl=http://ecmtest.bo.priv:18080/bonitaview
