--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -19,6 +19,8 @@ debugTestMode=true
 debugSaltaProtocollo=true
 
 ############### ECM PROPERTIES ###############
+pianoFormativo.giornoFineModifica=31
+pianoFormativo.meseFineModifica=12
 
 ###### Workflow ######
 bonita.bonitaviewserverurl=http://localhost:9980/bonitaview
