--- a/src/main/resources/application-regione-test.properties
+++ b/src/main/resources/application-regione-test.properties
@@ -20,6 +20,8 @@ logging.config=classpath:log4j.properties
 logging.level.org.thymeleaf.* ERROR
 
 ############### ECM PROPERTIES ###############
+pianoFormativo.giornoFineModifica=31
+pianoFormativo.meseFineModifica=12
 
 ###### Workflow ######
 bonita.bonitaviewserverurl=http://altecm01:18080/bonitaview
