Modifiche config per regione

--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -3,11 +3,7 @@ spring.datasource.url= jdbc:postgresql://dlppgsqlecmdb.farmsanita.intra.rve:6432
 spring.datasource.username=ecm
 spring.datasource.password=3RjrB39kzeRx
 
-# Liquibase
-liquibase.default-schema=ecmdb
-
 # JPA
-spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # THYMELEAF
@@ -24,34 +20,69 @@ pianoFormativo.giornoFineModifica=31
 pianoFormativo.meseFineModifica=12
 
 ###### Workflow ######
-bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
-bonita.serverurl=http://127.0.0.1:9999
+bonita.bonitaviewserverurl=http://alpecm01:18080/bonitaview
+bonita.serverurl=http://alpecm01:18080
 bonita.applicationname=bonita
 bonita.admin.username=admin
-bonita.admin.password=admin
+bonita.admin.password=3dinformatica
 bonita.users.password=pwd
 bonita.createaccountonlogin=true
 logging.level.org.thymeleaf.* ERROR
 
 ###### E-MAIL ######
-mail.host=mail.regione.veneto.it
+mail.host=mailrelay.farmsanita.intra.rve porta
 mail.port=25
 mail.protocol=smtp
-mail.smtp.auth=true
+mail.smtp.auth=false
 mail.smtp.starttls.enable=false
-mail.username=sanita-auac
-mail.password=AppWeb01
+mail.username=
+mail.password=
 email.segreteriaEcm=segreteria.ECMVeneto@regione.veneto.it
 #base url della webapp per link nelle email
-application.baseurl=
+application.baseurl=http://ecm-sanita.regione.veneto.it
 
 ########## Co.Ge.A.P.S. #########
 cogeaps.protocol=http
-cogeaps.host=???
-cogeaps.port=-1
+cogeaps.host=
+cogeaps.port=
 cogeaps.rest_service.carica=/app/api/evento/carica
 cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
-cogeaps.username=???
-cogeaps.password=???
+cogeaps.username=
+cogeaps.password=
+
+######### MY PAY #########
+#Parametri per connettersi al servizio (diverso tra test e produzione)
+ipa=R_VENETO
+password=password
+#Id servizio assegnato da MyPay (IUD)
+servizio=009
+#Endpoint (diverso tra test e produzione)
+endpoint.pagamenti=
+#Specifico in base a cosa pago - da concordare con RVE e Mola
+datispecifici.riscossione=9/123456
+#Da aggiornare con il dato definitivo (da concordare con Regione)
+tipo.dovuto.evento=ECM_SINGOLO_EVENTO
+tipo.dovuto.quotaannua=ECM_QUOTA_ANNUA
+proxy.attivo=false
+proxy.host
+proxy.port
+#PER ALCUNI PROXY POTREBBE ANCHE NON ESSERE VALORIZZATO. IN EFFETTO DOVREBBE ESSERE COSI' PER QUELLO DI REGIONE
+proxy.username
+proxy.password
+causale.length=140
+versione=6.0
+
+######### FIRMA DIGITALE #########
+firma.url=https://sicurezza.regione.veneto.it/FirmaWeb/servlet/AdapterHTTP
+firma.idclassificazione=60.00.05.00.00-C.120.21.1.B4
+firma.referer=http://ecm-sanita.regione.veneto.it/*
+
+######### PROTOCOLLO #########
+protocollo.codApplicativo=S051.001
+protocollo.operatore=tania-ferrotti
+protocollo.codStruttura=69.02.03.00.00
+protocollo.idc=C.120.23.1
+protocollo.oggetto=Test Engineering ECM
+protocollo.endpoint=http://protoweb.intra.rve/LapisWebSoap/LapisWebSoap.asp
 
 ##############################################
