--- a/src/main/resources/application-regione-test.properties
+++ b/src/main/resources/application-regione-test.properties
@@ -43,6 +43,11 @@ mail.username=
 mail.password=
 email.segreteriaEcm=segreteria.ECMVeneto@regione.veneto.it
 #base url della webapp per link nelle email
-application.baseurl=
+application.baseurl=http://ecm-test.regione.veneto.it/ecm
+
+######### FIRMA DIGITALE #########
+firma.url=https://servizi.collaudo.regione.veneto.it/FirmaWeb/servlet/AdapterHTTP
+firma.idclassificazione=60.00.05.00.00-C.120.21.1.B4
+firma.referer=http://ecm-test.regione.veneto.it/ecm/*
 
 ##############################################
