url mypay produzione

--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -57,7 +57,7 @@ password=password
 #Id servizio assegnato da MyPay (IUD)
 servizio=009
 #Endpoint (diverso tra test e produzione)
-endpoint.pagamenti=
+endpoint.pagamenti=https://mypay.regione.veneto.it/pa/services/PagamentiTelematiciDovutiPagati
 #Specifico in base a cosa pago - da concordare con RVE e Mola
 datispecifici.riscossione=9/123456
 #Da aggiornare con il dato definitivo (da concordare con Regione)
