Pdf Accreditamento Diniego impostate Data e numero protocollo vari e aggiunti data e nuomero protocollo invio domanda

--- a/src/main/resources/application-abarducci.properties
+++ b/src/main/resources/application-abarducci.properties
@@ -19,9 +19,12 @@ spring.thymeleaf.cache: false
 ###### Workflow ######
 bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
 bonita.serverurl=http://127.0.0.1:9999
+#bonita.serverurl=http://vpascali-desktop.bo.priv:18080
 bonita.applicationname=bonita
 bonita.admin.username=adm
 bonita.admin.password=pwd
+#bonita.admin.username=admin
+#bonita.admin.password=admin
 bonita.system.username=system
 bonita.users.password=pwd
 bonita.createaccountonlogin=true
