--- a/src/main/resources/application-joe19.properties
+++ b/src/main/resources/application-joe19.properties
@@ -38,5 +38,6 @@ email.segreteriaEcm=me@bo.prov
 #base url della webapp per link nelle email
 application.baseurl=http://localhost:8080
 debugTestMode=true
+debugSaltaProtocollo=true
 
 ##############################################
