--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,6 +9,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.default_schema=ecmdb
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-query= select 1
 
 # THYMELEAF
 spring.thymeleaf.cache: false
