gestione ottimizzata delle connessioni al DB con il driver JDBC

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,10 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.default_schema=ecmdb
 
+# gestione ottimizzata delle connessioni al DB con il driver JDBC
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-query=select 1
+
 #DEFAULT
 #spring.jpa.hibernate.naming-strategy=org.springframework.boot.orm.jpa.hibernate.SpringNamingStrategy
 
@@ -23,7 +27,6 @@ multipart.maxRequestSize = 20MB
 
 # LOGGING
 #logging.file=c:/ecm.log
-
 
 ############### ECM PROPERTIES ###############
 
