Allineamento file di property con versione deployate

--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -30,7 +30,7 @@ bonita.createaccountonlogin=true
 logging.level.org.thymeleaf.* ERROR
 
 ###### E-MAIL ######
-mail.host=mailrelay.farmsanita.intra.rve porta
+mail.host=mailrelay.farmsanita.intra.rve
 mail.port=25
 mail.protocol=smtp
 mail.smtp.auth=false
@@ -41,15 +41,6 @@ email.segreteriaEcm=segreteria.ECMVeneto@regione.veneto.it
 #base url della webapp per link nelle email
 application.baseurl=http://ecm-sanita.regione.veneto.it
 
-########## Co.Ge.A.P.S. #########
-cogeaps.protocol=http
-cogeaps.host=
-cogeaps.port=
-cogeaps.rest_service.carica=/app/api/evento/carica
-cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
-cogeaps.username=
-cogeaps.password=
-
 ######### MY PAY #########
 #Parametri per connettersi al servizio (diverso tra test e produzione)
 ipa=R_VENETO
@@ -57,7 +48,7 @@ password=password
 #Id servizio assegnato da MyPay (IUD)
 servizio=009
 #Endpoint (diverso tra test e produzione)
-endpoint.pagamenti=https://mypay.regione.veneto.it/pa/services/PagamentiTelematiciDovutiPagati
+endpoint.pagamenti=
 #Specifico in base a cosa pago - da concordare con RVE e Mola
 datispecifici.riscossione=9/123456
 #Da aggiornare con il dato definitivo (da concordare con Regione)
@@ -86,3 +77,6 @@ protocollo.oggetto=Test Engineering ECM
 protocollo.endpoint=http://protoweb.intra.rve/LapisWebSoap/LapisWebSoap.asp
 
 ##############################################
+
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-query=select 1
