--- a/src/main/resources/application-regione-test.properties
+++ b/src/main/resources/application-regione-test.properties
@@ -2,6 +2,9 @@
 spring.datasource.url= jdbc:postgresql://dltpgsqlecmdb.farmsanita.intra.rve:6432/ecmdb
 spring.datasource.username=ecm
 spring.datasource.password=3dinformatica
+#VPascali update 22122016
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-query= select 1
 
 # Liquibase
 liquibase.default-schema=ecmdb
