Aggiornamento properties per firmaWeb in collaudo e produzione

--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -66,7 +66,7 @@ versione=6.0
 ######### FIRMA DIGITALE #########
 firma.url=https://sicurezza.regione.veneto.it/FirmaWeb/servlet/AdapterHTTP
 firma.idclassificazione=60.00.05.00.00-C.120.21.1.B4
-firma.referer=http://ecm-sanita.regione.veneto.it/*
+firma.referer=https://ecm.regione.veneto.it/ecm/*
 
 ######### PROTOCOLLO #########
 protocollo.codApplicativo=S051.001
