--- a/src/main/resources/application-regione-test.properties
+++ b/src/main/resources/application-regione-test.properties
@@ -51,6 +51,6 @@ application.baseurl=http://ecm-test.regione.veneto.it/ecm
 ######### FIRMA DIGITALE #########
 firma.url=https://servizi.collaudo.regione.veneto.it/FirmaWeb/servlet/AdapterHTTP
 firma.idclassificazione=60.00.05.00.00-C.120.21.1.B4
-firma.referer=http://ecm-test.regione.veneto.it/ecm/*
+firma.referer=https://ecm-test.regione.veneto.it/ecm/*
 
 ##############################################
