modifiche per il Modulo14:
: Bacheca segreteria per abilitazioni/disabilitazioni attività Provider

--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -39,7 +39,7 @@ mail.username=
 mail.password=
 email.segreteriaEcm=segreteria.ECMVeneto@regione.veneto.it
 #base url della webapp per link nelle email
-application.baseurl=http://ecm-sanita.regione.veneto.it
+application.baseurl=http://ecm.regione.veneto.it
 
 ######### MY PAY #########
 #Parametri per connettersi al servizio (diverso tra test e produzione)
