--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -120,10 +120,9 @@ task.sendAlertEmail=false
 pianoFormativo.giornoFineModifica=15
 pianoFormativo.meseFineModifica=12
 
-#pianoFormativo.dataFineModifica -> 30 Aprile
+#relazioneAnnuale.dataFineModifica -> 30 Aprile
 relazioneAnnuale.giornoFineModifica=30
 relazioneAnnuale.meseFineModifica=4
-
 
 ###### Workflow ######
 bonita.bonitaviewserverurl=http://127.0.0.1:9999/bonitaview
@@ -150,7 +149,7 @@ cogeaps.password=JqFdpjv!9Y
 
 ############### THREAD PROPERTIES ############
 
-thread.corePoolSize=5
+thread.corePoolSize=6
 thread.maxPoolSize=10
 thread.queueCapacity=25
 thread.threadNamePrefix=ecm-scheduled-tasks-thread-
