Filtraggio referee che non hanno valutato per 3 volte

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -113,6 +113,9 @@ giorni.prima.blocco.edit.gruppoB=10
 #abilta / disabilita l'invio automatico di email come promemoria delle scadenza
 task.sendAlertEmail=false
 
+#limite di valutazioni non date per cui un referee è selezionabile per una valutazione
+valutazioni.non.date.limite=3
+
 ########################################################
 
 ############### DATE E SCADENZE VARIE ###############
