--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+
 	<groupId>it.tredi</groupId>
 	<artifactId>ecm</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
@@ -32,9 +33,9 @@
 		<postgresql.version>9.4.1211</postgresql.version>
 	</properties>
 
-	<!-- profiles> <profile> <id>dev</id> <properties> <activatedProperties>dev</activatedProperties> 
-		</properties> <activation> <activeByDefault>true</activeByDefault> </activation> 
-		</profile> <profile> <id>prod</id> <properties> <activatedProperties>prod</activatedProperties> 
+	<!-- profiles> <profile> <id>dev</id> <properties> <activatedProperties>dev</activatedProperties>
+		</properties> <activation> <activeByDefault>true</activeByDefault> </activation>
+		</profile> <profile> <id>prod</id> <properties> <activatedProperties>prod</activatedProperties>
 		</properties> </profile> </profiles -->
 
 	<dependencies>
@@ -131,7 +132,7 @@
 		    <artifactId>commons-io</artifactId>
 		    <version>2.5</version>
 		</dependency>
- 
+
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
@@ -161,7 +162,7 @@
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-csv</artifactId>
 		    <version>1.3</version>
-		</dependency>	
+		</dependency>
 		 <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
@@ -176,7 +177,7 @@
             <groupId>org.apache.santuario</groupId>
             <artifactId>xmlsec</artifactId>
             <version>1.5.1</version>
-        </dependency>	
+        </dependency>
 	<!-- 	<dependency>
 		    <groupId>org.bouncycastle</groupId>
 		    <artifactId>bcprov-jdk16</artifactId>
@@ -197,6 +198,16 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jersey</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.javers</groupId>
+			<artifactId>javers-spring-boot-starter-sql</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.javers</groupId>
+			<artifactId>javers-core</artifactId>
+			<version>2.8.2</version>
 		</dependency>
 	</dependencies>
 
@@ -269,7 +280,7 @@
 				</resources>
 			</build>
 		</profile>
-		<!-- esempio di profilo da utilizzare per ambienti di test per evitare 
+		<!-- esempio di profilo da utilizzare per ambienti di test per evitare
 			di copiare le properties di altri ambienti -->
 		<profile>
 			<id>demo</id>
@@ -296,7 +307,7 @@
 				</resources>
 			</build>
 		</profile>
-		<!-- esempio di profilo da utilizzare per le build di produzione o ambienti 
+		<!-- esempio di profilo da utilizzare per le build di produzione o ambienti
 			di test per evitare di copiare le properties di altri ambienti -->
 		<profile>
 			<id>regione-prod</id>
@@ -349,7 +360,7 @@
 			</build>
 		</profile>
 	</profiles>
-	
+
 	<distributionManagement>
 		<repository>
 			<id>deployment</id>
