commit in locale

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -116,6 +116,9 @@ task.sendAlertEmail=false
 #limite di valutazioni non date per cui un referee è selezionabile per una valutazione
 valutazioni.non.date.limite=3
 
+#giorni che il provider ha per poter modificare i dati e i documenti della domanda di accreditamento
+giorni.variazione.dati.accreditamento=10
+
 ########################################################
 
 ############### DATE E SCADENZE VARIE ###############
