Aggiornate parametri cogeaps

--- a/src/main/resources/application-demo.properties
+++ b/src/main/resources/application-demo.properties
@@ -29,6 +29,15 @@ bonita.admin.password=admin
 bonita.users.password=pwddemo
 bonita.createaccountonlogin=true
 
+########## Co.Ge.A.P.S. #########
+cogeaps.protocol=http
+cogeaps.host=ws1.cogeaps.it
+cogeaps.port=-1
+cogeaps.rest_service.carica=/app/api/evento/carica
+cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
+cogeaps.username=ente_050
+cogeaps.password=JqFdpjv!9Y
+
 ###### E-MAIL ######
 mail.host=dns3.bo.priv
 mail.port=25
