--- a/src/main/resources/application-regione-prod.properties
+++ b/src/main/resources/application-regione-prod.properties
@@ -29,6 +29,15 @@ bonita.users.password=pwd
 bonita.createaccountonlogin=true
 logging.level.org.thymeleaf.* ERROR
 
+########## Co.Ge.A.P.S. #########
+cogeaps.protocol=http
+cogeaps.host=ws1.cogeaps.it
+cogeaps.port=-1
+cogeaps.rest_service.carica=/app/api/evento/carica
+cogeaps.rest_service.stato_elaborazione=/app/api/evento/statoelaborazione
+cogeaps.username=ente_050
+cogeaps.password=JqFdpjv!9Y
+
 ###### E-MAIL ######
 mail.host=mailrelay.farmsanita.intra.rve
 mail.port=25
