--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -200,4 +200,6 @@ protocollo.idc=C.120.23.1
 protocollo.oggetto=Test Engineering ECM
 protocollo.endpoint=http://172.31.226.82/LapisWebSOAP/LapisWebSOAP.asp
 
+javers.packagesToScan=it.tredi.ecm.audit.entity
+
 ##############################################
