--- a/src/main/resources/auditlabelmap.properties
+++ b/src/main/resources/auditlabelmap.properties
@@ -1,7 +1,63 @@
 EventoRES.dataInizio=label.data_inizio
 EventoRES.dataFine=label.data_fine
+EventoRES.dichiarazioneAssenzaConflittoInteresse=label.dichiarazione_assenza_conflitto_interesse
 EventoRES.programma=label.programma
 EventoRES.programma.programma=label.programma_attività_formativa
 DettaglioAttivitaRES.orarioInizio=label.orario_inizio
 DettaglioAttivitaRES.orarioFine=label.orario_fine
 ProgrammaGiornalieroRES.giorno=label.programma_del
+ProviderAudit.id=label.id
+ProviderAudit.legaleRappresentante=label.dati_del_legale_rappresentante
+ProviderAudit.delegatoLegaleRappresentante=label.delegato_legale_rappresentante
+ProviderAudit.coordinatoreComitatoScientifico=label.coordinatore_comitato_scientifico
+ProviderAudit.responsabileSegreteria=label.responsabile_segreteria
+ProviderAudit.componentiComitatoScientificoMap=label.componenti_comitato_scientifico
+#lasciatop vuoto cosi non viene mostrato
+ProviderAudit.componentiComitatoScientificoMap.anagrafica=
+ProviderAudit.sedeLegale=label.sede_legale
+ProviderAudit.sediOperative=label.sedi_operative
+PersonaAudit.curriculumVitae=label.cv
+PersonaAudit.attoDiNomina=label.attoNomina
+PersonaAudit.id=label.id
+PersonaAudit.ruolo=label.ruolo
+PersonaAudit.professione=label.professione
+PersonaAudit.delega=label.delega
+ProviderAudit.denominazioneLegale=label.denominazione_legale
+ProviderAudit.tipoOrganizzatore=label.tipo_organizzatore
+ProviderAudit.gruppo=label.gruppo
+ProviderAudit.partitaIva=label.partita_iva
+ProviderAudit.codiceFiscale=label.codice_fiscale
+ProviderAudit.emailStruttura=label.email
+ProviderAudit.ragioneSociale=label.ragione_sociale
+ProviderAudit.naturaOrganizzazione=label.natura_organizzazione
+ProviderAudit.noProfit=label.no_profit
+ProviderAudit.status=label.stato_del_provider
+ProviderAudit.codiceCogeaps=label.codiceCogeaps
+ProviderAudit.canInsertAccreditamentoStandard=label.caninsert_domanda_accreditamento_standard
+ProviderAudit.dataScadenzaInsertAccreditamentoStandard=label.caninsert_domanda_accreditamento_standard_scadenza
+ProviderAudit.canInsertAccreditamentoProvvisorio=label.caninsert_nuova_domanda_accreditamento_provvisorio
+ProviderAudit.dataRinnovoInsertAccreditamentoProvvisorio=label.caninsert_nuova_domanda_accreditamento_provvisorio_partenza
+ProviderAudit.canInsertPianoFormativo=label.caninsert_piano_formativo
+ProviderAudit.dataScadenzaInsertPianoFormativo=label.caninsert_piano_formativo_scadenza
+ProviderAudit.canInsertEvento=label.caninsert_eventi
+ProviderAudit.canInsertRelazioneAnnuale=label.caninsert_relazione_annuale
+ProviderAudit.dataScadenzaInsertRelazioneAnnuale=label.caninsert_relazione_annuale_scadenza
+SedeAudit.id=label.id
+SedeAudit.provincia=label.provincia
+SedeAudit.comune=label.comune
+SedeAudit.indirizzo=label.indirizzo
+SedeAudit.cap=label.cap
+SedeAudit.telefono=label.telefono
+SedeAudit.fax=label.fax
+SedeAudit.email=label.email
+SedeAudit.sedeLegale=label.is_sede_legale
+SedeAudit.sedeOperativa=label.is_sede_operativa
+#PersonaAudit.coordinatoreComitatoScientifico=
+Anagrafica.id=label.id
+Anagrafica.cognome=label.cognome
+Anagrafica.nome=label.nome
+Anagrafica.codiceFiscale=label.codice_fiscale
+Anagrafica.telefono=label.telefono
+Anagrafica.cellulare=label.cellulare
+Anagrafica.email=label.email
+Anagrafica.pec=label.pec
