--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -43,4 +43,11 @@ email.segreteriaEcm=me@bo.prov
 #base url della webapp per link nelle email
 application.baseurl=http://localhost:8080
 
+######### HTTPS #######
+server.port: 8443
+server.ssl.key-store: keystore.p12
+server.ssl.key-store-password: adminadmin3d
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: tomcat
+
 ##############################################
